--- a/app/src/main/res/layout/av_activity_launch.xml
+++ b/app/src/main/res/layout/av_activity_launch.xml
@@ -3,7 +3,14 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/holo_red_dark">
+    android:layout_height="match_parent">
+
+    <!-- -->
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:contentDescription="@null"
+        android:src="@drawable/ic_launcher_round"/>
 
 </RelativeLayout>
