--- a/app/src/main/res/layout/av_item_list_demand_default.xml
+++ b/app/src/main/res/layout/av_item_list_demand_default.xml
@@ -129,6 +129,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@id/av_item_list_demand_default_main"
-        android:background="@android:color/darker_gray"/>
+        android:background="#EFEFEF"/>
 
 </RelativeLayout>
