--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/av_color_primary</item>
         <item name="colorPrimaryDark">@color/av_color_primaryDark</item>
         <item name="colorAccent">@color/av_color_accent</item>
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
 
 </resources>
