Show the map on the demand detail screen

--- a/app/src/main/res/layout/av_fragment_detail_demand.xml
+++ b/app/src/main/res/layout/av_fragment_detail_demand.xml
@@ -190,11 +190,12 @@
 
     </RelativeLayout>
 
-    <!-- TODO Bottom Part -->
-    <FrameLayout
+    <!-- Bottom Part -->
+    <fragment
+        android:id="@+id/av_fragment_detail_demand_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-    </FrameLayout>
+        android:layout_weight="1"/>
 
 </LinearLayout>
